--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/preset-classic": "3.1.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-lunr-search": "^3.3.2",
     "dotenv": "^16.4.5",
     "katex": "^0.16.9",
     "prism-react-renderer": "^2.3.0",
